--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "04.01-typescriptconfig",
+  "name": "TP-DSW-3K3-BE-Griva-Gutierrez",
   "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "build": "tsc -p ./tsconfig.json",
-    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/index.js\""
+    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node dist/app.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "4.18.2"
+  },
   "devDependencies": {
+    "@types/express": "4.17.17",
+    "@types/node": "20.5.2",
     "tsc-watch": "6.0.4",
-    "typescript": "5.1.3"
+    "typescript": "5.1.6"
   }
 }
