--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ coverage
 .env
 
 # dependency directory
-node_modules
+node_modules 
+#ver bien por las dudas **/node_modules 
 
 # OS metadata
 .DS_Store
@@ -14,7 +15,7 @@ Thumbs.db
 # ignore built ts files
 dist/**/*
 
-# vscode
+# vscode !sube, .no sube 
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -22,7 +23,7 @@ dist/**/*
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
-## local jistory for vscode
+## local history for vscode
 .history/
 
 ## built vscode extensions
