--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "TP-DSW-3K3-BE-Griva-Gutierrez",
+  "name": "1tp-dsw-3k3-be-griva-gutierrez",
   "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node dist/app.js\""
+    "startdev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/app.js\""
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "4.18.2"
   },
+
   "devDependencies": {
     "@types/express": "4.17.17",
     "@types/node": "20.5.2",
