--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongo": "0.1.0",
     "mongodb": "6.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.5.2",
+    "@types/nodemailer": "^6.4.11",
+    "crypto": "^1.0.1",
+    "nodemailer": "^6.9.5",
     "tsc-watch": "6.0.4",
     "typescript": "5.1.6"
   }
