added auth middleware but something is not working properly

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mikro-orm/mongo-highlighter": "1.0.0",
     "@mikro-orm/mongodb": "5.8.10",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "0.1.13"
