--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mikro-orm/core": "5.8.10",
     "@mikro-orm/mongo-highlighter": "1.0.0",
     "@mikro-orm/mongodb": "5.8.10",
+    "all": "^0.0.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.16",
     "@types/express": "4.17.17",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.5.2",
