--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mikro-orm/core": "5.8.10",
     "@mikro-orm/mongo-highlighter": "1.0.0",
     "@mikro-orm/mongodb": "5.8.10",
+    "@types/multer": "^1.4.10",
     "all": "^0.0.0",
-    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
+    "path": "^0.12.7",
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
@@ -29,7 +31,6 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.5.2",
     "@types/nodemailer": "^6.4.11",
-    "crypto": "^1.0.1",
     "nodemailer": "^6.9.5",
     "tsc-watch": "6.0.4",
     "typescript": "5.1.6"
