--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mikro-orm/mongodb": "5.8.10",
     "@types/multer": "^1.4.10",
     "all": "^0.0.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "4.18.2",
