--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mikro-orm/core": "5.8.10",
     "@mikro-orm/mongo-highlighter": "1.0.0",
     "@mikro-orm/mongodb": "5.8.10",
-    "@types/multer": "^1.4.10",
+    "@nestjs/platform-express": "^10.4.0",
+    "@types/multer": "^1.4.11",
     "all": "^0.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
