--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@mikro-orm/mongodb": "5.8.10",
     "@types/multer": "^1.4.10",
     "all": "^0.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "4.18.2",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.3",
     "multer": "1.4.5-lts.1",
     "path": "^0.12.7",
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.16",
     "@types/express": "4.17.17",
     "@types/jsonwebtoken": "^9.0.3",
