--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/app.js\""
+    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/app.js\"",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -30,14 +31,19 @@
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.16",
     "@types/express": "4.17.17",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.5.2",
     "@types/nodemailer": "^6.4.11",
+    "jest": "^29.7.0",
     "nodemailer": "^6.9.5",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsc-watch": "6.0.4",
     "typescript": "5.1.6"
   }
