--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "alwaysStrict": true,
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "types": ["jest", "node"]
   },
   "include": ["src/**/*", "**/*.ts"],
   "exclude": ["node_modules"]
