--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "alwaysStrict": true,
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "types": ["jest", "node"]
+    "experimentalDecorators": true
   },
   "include": ["src/**/*", "**/*.ts"],
   "exclude": ["node_modules"]
