--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/src/app.js\"",
-    "test": "jest --detectOpenHandles"
+    "start:devv": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/src/app.js\"",
+    "unittest": "jest --detectOpenHandles",
+    "start:dev": "cross-env NODE_ENV=development tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/src/app.js\"",
+    "integrationtest": "cross-env NODE_ENV=integrationtest tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/src/app.js\""
   },
   "keywords": [],
   "author": "",
@@ -40,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "20.5.2",
     "@types/nodemailer": "^6.4.11",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemailer": "^6.9.5",
     "ts-jest": "^29.2.5",
