--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
-// no se debe de agregar nunca
+// // no se debe de agregar nunca
 {
   "compilerOptions": {
     "incremental": true,
@@ -18,3 +18,25 @@
   "include": ["src/**/*", "**/*.ts"],
   "exclude": ["node_modules"]
 }
+
+
+// no se debe de agregar nunca
+// {
+//   "compilerOptions": {
+//     "incremental": true,
+//     "target": "es2020",
+//     "module": "ES2022",
+//     "moduleResolution": "bundler",
+//     "sourceMap": true,
+//     "outDir": "./dist",
+//     "esModuleInterop": true,
+//     "forceConsistentCasingInFileNames": true,
+//     "strict": true,
+//     "alwaysStrict": true,
+//     "skipLibCheck": true,
+//     "emitDecoratorMetadata": true,
+//     "experimentalDecorators": true
+//   },
+//   "include": ["src/**/*", "**/*.ts"],
+//   "exclude": ["node_modules"]
+// }
