--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:devv": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/src/app.js\"",
     "test": "jest --detectOpenHandles",
     "start:dev": "cross-env NODE_ENV=development tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/src/app.js\"",
     "integrationtest": "cross-env NODE_ENV=integrationtest tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/src/app.js\""
@@ -33,6 +32,8 @@
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
     "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.6",
@@ -43,6 +44,7 @@
     "@types/node": "20.5.2",
     "@types/nodemailer": "^6.4.11",
     "@types/supertest": "^6.0.2",
+    "babel-plugin-transform-import-meta": "^2.3.2",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemailer": "^6.9.5",
