Admin credentials secured in environment file

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ NODE_ENV=development
 DB_NAME_DEV=Ecommerce2023
 DB_NAME_TEST=EcommerceIntegrationTest
 JWT_SECRET=secretkey123456
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=admin123
